data/all_generated_tests/raw_wast_tests/block_ImproperFunctionCallorReturnHandling_2526.wast
;; 7. **Function Call after Branching**:    - **Description**: Place a `br` instruction inside a block followed by a function call. Test if the block correctly branches and then calls the function post-branch.    - **Constraint**: Ensure correct execution order after branching within a block.    - **Improper Handling**: The function call could be skipped or improperly executed after the branch.

(assert_invalid
  (module (func $type-func-call-after-branching
    (block
      (br 0)
      (call 0)
    )
  ))
  "invalid branch and call sequence"
)